Fix fave alignment

--- a/static/style5/_detail.scss
+++ b/static/style5/_detail.scss
@@ -131,6 +131,10 @@ div.row {
     transform
   );
 
+  body.full.small & {
+    line-height: 20px;
+  }
+
   &.unrequestable {
     display: none;
 
